system/github-actions-runner/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sophie

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sophie
  template:
    metadata:
      labels:
        app: sophie
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: lithium
      priorityClassName: actions-runner
      securityContext:
        fsGroup: 123
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: runner
          image: ghcr.io/actions/actions-runner:2.338.0
          command:
            - /bin/bash
            - -euo
            - pipefail
            - -c
            - |
              export PATH="/runner/bin:$PATH"
              exec /runner/run.sh
          resources:
            requests:
              cpu: "1"
              memory: 4Gi
              ephemeral-storage: 40Gi
            limits:
              cpu: "4"
              memory: 8Gi
              ephemeral-storage: 80Gi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1001
          volumeMounts:
            - name: pnpm-store
              mountPath: /home/runner/.local/share/pnpm/store
            - name: runner-state
              mountPath: /runner
            - name: work
              mountPath: /runner/_work
      volumes:
        - name: pnpm-store
          persistentVolumeClaim:
            claimName: pnpm-store
        - name: registration
          secret:
            optional: true
            secretName: registration
        - name: runner-state
          persistentVolumeClaim:
            claimName: runner-state
        - name: work
          emptyDir:
            sizeLimit: 80Gi
